<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.kaanduzbastilar.quickshop.view.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.kaanduzbastilar.quickshop.view.UserFragment"
        android:label="@string/title_profile" />
    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.kaanduzbastilar.quickshop.view.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/productDetailFragment"
        android:name="com.kaanduzbastilar.quickshop.ProductDetailFragment"
        android:label="Product Detail"
        tools:layout="@layout/fragment_product_detail" >
        <action
            android:id="@+id/action_productDetailFragment_to_navigation_cart"
            app:destination="@id/navigation_cart" />
    </fragment>
</navigation>