<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:gravity="center"
    android:background="#FFF7F6">

    <ImageView
        android:layout_width="267dp"
        android:layout_height="267dp"
        android:src="@drawable/app_intro1"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_intro1"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_regular"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_intro1"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto_light"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc2_intro1"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/roboto_light"
        />

</LinearLayout>